--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,10 +25,11 @@
           <% end %>
         </tr>
       </table>
-      
-      <%= render "book_comments/index", book: @book %>
+      <div class = "index">
+        <%= render "book_comments/index", book: @book %>
+      </div>
       <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
-      
+
     </div>
   </div>
 </div>
