--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,1 +1,2 @@
-$(".index").html("<%= j(render 'book_comments/index', book: @book)%>")
+$("textarea").val("");
+$(".index").html("<%= j(render 'book_comments/index', book: @book)%>");
