--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$(".favorite").html("<%= j(render "favorites/btn", book: @book)%>");
+$("#book_<%= @book.id %> .favorite-btn").html("<%= j(render 'favorites/btn', book: @book) %>");
