共通レイアウト化

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -22,3 +22,9 @@
     <% end %>
   </tbody>
 </table>
+<p>テスト</p>
+<script type="text/javascript">
+  $(document).ready(function() {
+    $("p").text("成功！！");
+  });
+</script>
